Fixed Slash error on calculate

--- a/add/templates/index.html
+++ b/add/templates/index.html
@@ -4,7 +4,7 @@
 {% block body %}
     <h1>Calculator App</h1>
     <a href="{% url 'history' %}">Check History</a>
-    <form action="solve" method="post">
+    <form action="{% url 'solve' %}" method="post">
         {% csrf_token %}
         <label>Enter a number:</label>
         <input type="number" name="num1" >
@@ -23,6 +23,10 @@
         <label>Enter another number:</label>
         <input type="number" name="num2" >
 
-        <input type="submit" value="Calculate">
+        <form method="post" action="{% url 'solve' %}">
+            {% csrf_token %}
+            <input type="submit", value="Calculate">
+        </form>
+
     </form>
 {% endblock %}
