--- a/add/templates/result.html
+++ b/add/templates/result.html
@@ -4,9 +4,9 @@
 {% block body %}
 
     <div class="result">
-        <a href="history">Check History</a>
+        <a href="{% url 'history' %}">Check History</a>
         <p>Result is <span class="result_color">{{ result }}</span></p>
         
     </div>
-    <a href="index">Back to Home Page</a>
+    <a href="{% url 'index' %}">Back to Home Page</a>
 {% endblock %}
